# MSqRobPy

./: README.md  demo.py  pyproject.toml
src/msqrobpy/: __init__.py  aggregation.py  core.py  design.py  example.py  hurdle.py  moderation.py  results.py
src/msqrobpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py
tests/cross_validation/: de_ground_truth.csv  intensity_matrix.csv  r_contrast_results_ols.csv  r_contrast_results_rlm.csv  r_model_params_ols.csv  r_model_params_rlm.csv  r_squeezevar_ols.csv  r_squeezevar_rlm.csv  r_vcov_unscaled_ols.csv  r_vcov_unscaled_rlm.csv  run_all.py  run_msqrob2_r.R  sample_metadata.csv
tests/cross_validation/.ipynb_checkpoints/: README-checkpoint.md  compare_r_python-checkpoint.py  generate_test_data-checkpoint.py
